# raytracing

./: .gitignore  CMakeLists.txt  deprecated_setup.py  pyproject.toml  readme.md  setup.py
cmake/: FindEigen3.cmake  Findnvtx.cmake
raytracing/: __init__.py  raytracer.py
src/: bindings.cpp
