[project]
name = "raytracing"
version = "0.1.0"
description = "CUDA RayTracer with BVH acceleration"
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["torch", "torchvision"]

[build-system]
requires = ["scikit-build-core", "torch", "pybind11"]
build-backend = "scikit_build_core.build"

[dependency-groups]
dev = ["cmakelang>=0.6.13", "mkl-devel>=2025.1.0"]

[tool.uv.sources]
torch = [{ index = "pytorch-cu121" }]
torchvision = [{ index = "pytorch-cu121" }]

[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true
